--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Product_Help">
-        <activity android:name="com.subratsss.product_questionary_app.MainActivity">
+        <activity android:name="com.subratsss.product_questionary_app.uiComponents.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
