--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,6 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
     //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
@@ -68,6 +65,8 @@ dependencies {
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
+    //Showing for SVG Image
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
